packages/components/src/components/Modal/Container/styles.css
.arkyn_modal_container {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;

  display: flex;
  align-items: start;
  justify-content: center;

  padding: 10vh 0;
  padding-bottom: 2rem;
  overflow: auto;
}

.arkyn_modal_container > .overlay {
  position: fixed;
  z-index: 9997;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background: rgba(0, 0, 0, 0.5);
}

.arkyn_modal_container > .overlay:hover {
  cursor: pointer;
}

.arkyn_modal_container > .content {
  z-index: 9999;
  border-radius: 6px;
  background: var(--white);
}

